<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screen4">

    <TextView
        android:id="@+id/screen4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/screen_4"
        android:layout_margin="30dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/masukan_usia"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom"
        android:paddingStart="15dp"
        android:hint="@string/masukan_usia"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/masukan_alamat"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/masukan_alamat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom"
        android:paddingStart="15dp"
        android:hint="@string/masukan_alamat"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/masukan_pekerjaan"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/masukan_pekerjaan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom"
        android:paddingStart="15dp"
        android:hint="@string/masukan_pekerjaan"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/back_screen3"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextFields" />

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/back_screen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_screen_3"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>