<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screen2">

    <TextView
        android:id="@+id/screen2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/screen_2"
        android:layout_margin="30dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/masukan_nama"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:background="@drawable/custom"
        android:hint="@string/masukan_nama"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/pergi_screen3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextFields" />

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/pergi_screen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_screen_3"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>